--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.toiletpaperepic</groupId>
   <artifactId>SusSubstances-decompiled</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <name>WalmartMCAPI-SusSubstances-decompiled</name>
      <build>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
+              <version>2.3.2</version>
               <configuration>
-                  <source>1.17</source>
-                  <target>1.17</target>
+                  <source>17</source>
+                  <target>17</target>
+                  <encoding>UTF-8</encoding>
               </configuration>
           </plugin>
       </plugins>
@@ -26,7 +28,7 @@
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
-           <version>1.19-R0.1-SNAPSHOT</version><!--change this value depending on the version or use LATEST-->
+           <version>1.20.1-R0.1-SNAPSHOT</version><!--change this value depending on the version or use LATEST-->
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
